# LangChain_practice

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
src/: main.py  rag_over_code.py
src/pinecone_client/: vector_db.py
